package coffeeFactory.coffeeEntities;

/**
 * Common interface for all Coffees.
 */
public interface Coffee {

    public String renderCoffee();
}
