---
title: Decorator
---

classDiagram
    client--|>Coffee
    CoffeeDecorator--|>Coffee
    Coffee<|--MilkCoffee
    Coffee<|--ExpressoCoffee
    CoffeeWithSugar--|>CoffeeDecorator
    CoffeeWithChocolate--|>CoffeeDecorator

    class client{
        -Coffee: makeCoffe()
    }

    class CoffeeDecorator {
    <<interface>>
    Coffee: coffee
    CoffeeDecorator(Coffee c)
    addTopings()
    }

    class CoffeeWithSugar {
        CoffeeWithSugar(Coffee coffee)
        addTopings(String toping) String
    }

    class CoffeeWithChocolate {
        CoffeeWithChocolate(Coffee coffee)
        addTopings(String toping) String
    }

    class Coffee
    <<interface>> Coffee
    Coffee: renderCoffee() String

    class MilkCoffee{
        -price: Integer
        -getPrice() Integer
        -renderCoffee() String
    }
    class ExpressoCoffee{
        -price: Integer
        -getPrice() Integer
        -renderCoffee() String
    }

